# Onnx_YAC_2023

cpp-onnxruntime-resnet-console-app-main/OnnxRuntimeResNet/: CMakeLists.txt  Helpers.h  OnnxRuntimeResNet.cpp  test.cpp
